[package]
name = "schemafy"
version = "0.5.2" # VERSION_TAG
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

description = "Generates serializeable Rust types from a json schema"
license = "MIT"
keywords = ["json-schema", "code-generation"]
repository = "https://github.com/Marwes/schemafy"
documentation = "https://docs.rs/schemafy"

default-run = "main"

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "generate-tests"
path = "src/generate_tests.rs"
required-features = ["generate-tests"]

[workspace]

[dependencies]
schemafy_core = { version = "0.5.2", path = "schemafy_core" } # VERSION_TAG
schemafy_lib = { version = "0.5.2", path = "schemafy_lib" }   # VERSION_TAG
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1.6"
syn = "1.0"

Inflector = "0.11"


[features]
internal-regenerate = []
generate-tests = []
