[package]
name = "schemafy_core"
version = "0.5.2" # VERSION_TAG
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

description = "Generates serializeable Rust types from a json schema"
license = "MIT"

repository = "https://github.com/Marwes/schemafy"
documentation = "https://docs.rs/schemafy"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
