[package]
name = "schemafy_snapshot"
version = "0.2.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

description = "Snapshot for bootstrapping the schemafy crate"
license = "MIT"

repository = "https://github.com/Marwes/schemafy"
documentation = "https://docs.rs/schemafy"

[dependencies]
quote = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

Inflector = "0.6.0"
