[package]
name = "schemafy_snapshot"
version = "0.3.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

description = "Snapshot for bootstrapping the schemafy crate"
license = "MIT"

repository = "https://github.com/Marwes/schemafy"
documentation = "https://docs.rs/schemafy"

[dependencies]
quote = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

Inflector = "0.6.0"
itertools = "0.5.9"
